--- a/head.html
+++ b/head.html
@@ -7,9 +7,9 @@
     <title>head file</title>
 </head>
 <body>
-    <h1> this is a heading </h1>
-    <h4> this is another heading</h4>
-    <h3>This is again an another heading</h3>
+    <h1> This is heading 1 </h1>
+    <h4> This is heading 2</h4>
+    <h3> This is heading 3</h3>
     
 </body>
 </html>
