--- a/head.html
+++ b/head.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
-
-<h1>git-sessions</h1>
-<p>ishika mittal</p>
-
-</body>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <h1>Git-Sessions</h1>
+    <p>Devesh Bhushan</p>
+  </body>
 </html>
