--- a/head.html
+++ b/head.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <title>Git</title>
 </head>
+
 <body>
 
-<h1>git-sessions</h1>
-<p>ishika mittal</p>
+    <h1>Covid-19</h1>
+    <p>Anushtha</p>
 
 </body>
+
 </html>
