--- a/new file.html
+++ b/new file.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, tenetur? Tempora quibusdam hic modi repellendus dolorum
-    ducimus aspernatur corporis officia eligendi dignissimos dolorem sint id exercitationem, nihil magni qui
-    consectetur. Tempora laudantium corrupti blanditiis consequuntur. Earum, a voluptatum nisi, nostrum fugiat quidem
-    temporibus voluptas doloremque molestias totam recusandae odio ex architecto. Beatae odio, aut assumenda laboriosam
-    nihil quaerat impedit facere? Similique, architecto maiores hic incidunt temporibus autem delectus quis voluptates
-    debitis amet molestias tenetur possimus. Hic unde repellat magnam ratione veritatis praesentium possimus, reiciendis
-    dolores accusamus eveniet natus explicabo accusantium voluptatibus neque! Facilis natus animi culpa fugit ducimus
-    possimus, veritatis nihil debitis hic aut illo excepturi tenetur! Ipsam, harum voluptatibus! Corporis illo ex natus
-    voluptates eos repellendus, blanditiis accusantium molestias repudiandae non autem! Perferendis libero deleniti
-    porro error, neque corporis adipisci nihil magni eligendi laborum velit ullam pariatur magnam quidem excepturi
-    perspiciatis nostrum. Nam ratione quod hic dolore ex fuga.
+    <b>Covid Protection measures</b>
+    <h2>Protect yourself and others around you by knowing the facts and taking appropriate precautions. Follow advice provided by your local health authority. To prevent the spread of COVID-19:</h2>
+    <ul>
+        <li>Clean your hands often. Use soap and water, or an alcohol-based hand rub.</li>
+        <li>Maintain a safe distance from anyone who is coughing or sneezing.</li>
+        <li>Wear a mask when physical distancing is not possible.</li>
+        <li>Don’t touch your eyes, nose or mouth.</li>
+        <li>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</li>
+        <li>Stay home if you feel unwell.</li>
+        <li>If you have a fever, cough and difficulty breathing, seek medical attention.</li>
+        <li>Calling in advance allows your healthcare provider to quickly direct you to the right health facility. This protects you, and prevents the spread of viruses and other infections.</li>
+        <li>Masks can help prevent the spread of the virus from the person wearing the mask to others. Masks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene. Follow the advice provided by your local
+            health authority.</li>
+    </ul>
 </body>
 
 </html>
