--- a/file.html
+++ b/file.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hi there this is a code from new branch made by Devansh
+    <p>hi there this is a code from new branch made by Devansh</p>
 </body>
 </html>
