--- a/head.html
+++ b/head.html
@@ -2,11 +2,20 @@
 <html>
 <head>
 <title>Page Title</title>
+<style>
+body{
+    background-color: linen;
+  }
+  
+  h1 {
+    color: maroon;
+    margin-left: 40px;
+  } 
+  </style>
 </head>
 <body>
-
-<h1>git-sessions</h1>
-<p>ishika mittal</p>
+<h1>Git-sessions</h1>
+<p>The sessions were very knowledgable and interesting. Thank you so much.</p>
 
 </body>
 </html>
